Week11/Lab/Lab2/networkpolicy-allow-web-to-redis-postgres.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-web-to-redis-postgres
  namespace: security-lab
spec:
  podSelector:
    matchLabels:
      app: secure-web
  policyTypes: ["Egress"]
  egress:
  - to:
    - namespaceSelector: {}
      podSelector:
        matchLabels:
          app: redis
    ports:
    - protocol: TCP
      port: 6379
  - to:
    - namespaceSelector: {}
      podSelector:
        matchLabels:
          app: postgres
    ports:
    - protocol: TCP
      port: 5432
