Week11/Lab/Lab2/networkpolicy-default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: security-lab
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
