Week11/Lab/Lab2/gatekeeper-c-restrictroot.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sForbidRoot
metadata:
  name: enforce-nonroot
spec:
  match:
    kinds:
    - apiGroups: [""]
      kinds: ["Pod"]
