Week11/Lab/Lab2/gatekeeper-ct-allowedrepos.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8sallowedrepos
spec:
  crd:
    spec:
      names:
        kind: K8sAllowedRepos
  targets:
  - target: admission.k8s.gatekeeper.sh
    rego: |
      package k8sallowedrepos

      violation[{"msg": msg}] {
        input.review.kind.kind == "Pod"
        container := input.review.object.spec.containers[_]
        approved := {repo | repo := input.parameters.repos[_]}
        not startswith(container.image, approved[_])
        msg := sprintf("image %v is not from an allowed registry", [container.image])
      }
